# to-do

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  entrypoint.sh  main.py  pyproject.toml  pytest.ini
config/: authentication.py  models.py  urls.py  views.py
config/migrations/: 0001_initial.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_task_repeat.py  0004_task_due_date.py  0005_remove_task_completed_alter_task_description_and_more.py  0006_remove_todotask_task_task_completed_and_more.py  0007_list_task_list.py  0008_alter_list_id.py  0009_remove_task_completed_at_completedtask.py  0010_rename_tasks_completedtask_task.py
tasks/tests/: conftest.py  test_models.py  test_views.py
todo/: asgi.py  settings.py  urls.py  wsgi.py
todo/settings/: base.py  dev.py  prod.py
users/migrations/: 0001_initial.py
