[project]
name = "to-do"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.6.1",
    "gunicorn>=26.0.0",
    "mysqlclient>=2.2.8",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
